--- a/Problem_1/Readme
+++ b/Problem_1/Readme
@@ -1,5 +1,4 @@
-Задача 1
-Числа, кратные 3 или 5
+Задача 1. Числа, кратные 3 или 5
 
 Если выписать все натуральные числа меньше 10, кратные 3 или 5, то получим 3, 5, 6 и 9. Сумма этих чисел равна 23.
 
